correction of bug at update user and creation of DTOs